Ticket #1516 fixed error blocks alignment

--- a/sites/all/themes/doit/css/style.css
+++ b/sites/all/themes/doit/css/style.css
@@ -2236,6 +2236,10 @@ div.status, div.warning, div.error, div.messages, div.status, div.warning, div.e
 }
 
 .error, div.error {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
   border-color: red;
   background-color: #ffe5e5;
   background-image: -webkit-repeating-linear-gradient(35deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 25px, #ffd8d8 25px, #ffd8d8 50px);
@@ -2253,6 +2257,12 @@ div.status, div.warning, div.error, div.messages, div.status, div.warning, div.e
 }
 .error:active, div.error:active {
   color: red;
+}
+
+label[for="edit-last-name"],
+label[for="edit-first-name"],
+label[for="edit-cell-or-email"] {
+  display: none !important;
 }
 
 ul.tabs.primary {
