--- a/sites/all/themes/doit/sass/partials/05-ui-patterns/drupal/_ui-patterns.sass
+++ b/sites/all/themes/doit/sass/partials/05-ui-patterns/drupal/_ui-patterns.sass
@@ -34,12 +34,17 @@ div.status, div.warning, div.error
   color: $orange
   +link-colors($orange, $orange, $orange, $orange, false)
 .error, div.error
+  +box-sizing(border-box)
   border-color: $red
   background-color: tint($red, 90%)
   +background-image(repeating-linear-gradient(35deg, rgba($black, 0), rgba($black, 0) 25px, tint($red, 85%) 25px, tint($red, 85%) 50px))
   color: $red
   +link-colors($red, $red, $red, $red, false)
 
+label[for="edit-last-name"],
+label[for="edit-first-name"],
+label[for="edit-cell-or-email"]
+  display: none !important
 // BLOCK
 
 // TABS
